--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header class="header">
-        <section class="top-section">
+
+        <!-- Header Menuber part start   -->
+
+        <section class="container">
             <nav>
                 <div class="logo">
                     <h1>G3 Architects</h1>
@@ -17,13 +20,29 @@
                 <div class="menu-ber">
                     <ul>
                         <li><a href="#">home</a></li>
-                        <li><a href="#">deasbord</a></li>
+                        <li><a href="#">dashboard</a></li>
                         <li><a href="#">about</a></li>
                         <li><a href="#">contact us</a></li>
                         <li><a href="#">login</a></li>
                     </ul>
                 </div>
             </nav>
+        </section>
+
+
+        <!-- Header Banner part start   -->
+
+        <section class="container">
+            <div class="top-title">
+                <h1>Brand New Group of Architects </h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+            <div class="explore-btn">
+                <button class="btn">Explore More</button>
+            </div>
+            <div class="banner">
+                <img src="images/banner.png" alt="">
+            </div>
         </section>
     </header>
 </body>
