--- a/index.html
+++ b/index.html
@@ -45,5 +45,25 @@
             </div>
         </section>
     </header>
+
+             <!-- Gallary Section Start -->
+    
+    <section class="container">
+        <div class="gallar-text">
+            <div class="galarry">
+                <img src="images/team1.png" alt="team1">
+                <img src="images/team2.png" alt="team2">
+                <img src="images/team3.png" alt="team3">
+                <img src="images/team4.png" alt="team4">
+            </div>
+            <div class="gel-text">
+                <div class="text-area">
+                    <h3>Quick list <span class="of-our">of Our</span> <span class="featur">Features</span></h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn" >Explore More</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
