feauture section designed done

--- a/index.html
+++ b/index.html
@@ -65,5 +65,50 @@
             </div>
         </div>
     </section>
+
+         <!-- Future Section Start -->
+
+    <section class="container">
+        <div class="feauture-text-img">
+        <div class="feauture-text-area">
+            <div class="top-text">
+                <div class="left-margin">
+                    <div class="left-border"></div>
+                    <h2>Features you will love & enjoy</h2>
+                </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sequi voluptatum ipsam eligendi odit optio itaque distinctio? Iure autem dignissimos corporis corrupti? A maxime accusamus quidem inventore qui voluptate adipisci.</p>
+            </div>
+
+            <div class="service-text">
+                <div class="feauture-text">
+                    <h3>Desktop & Mobail Version</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora harum quia debitis temporibus aliquid necessitatibus quibusdam architecto accusamus magni eius, ipsam eligendi ullam id. Consequuntur libero totam iure ipsum laudantium!..........</p>
+                </div>
+                <div class="feauture-text">
+                    <h3>Drag & Drop Builder</h3>
+                    <p>Assumenda aliquid numquam commodi dicta nam recusandae expedita placeat. Dicta, quos enim! Numquam veritatis accusamus quae assumenda non sequi cum perspiciatis mollitia perferendis reprehenderit optio, at dolores cumque architecto et!..........</p>
+                </div>
+                <div class="feauture-text">
+                    <h3>Awesome Mordern Design</h3>
+                    <p>Impedit deserunt minus tempore earum et unde neque sequi asperiores explicabo quo reprehenderit quis, perspiciatis voluptatum quod sed officia, blanditiis non temporibus accusantium ut assumenda dicta tenetur placeat provident. Veniam...........</p>
+                </div>
+                <div class="feauture-text">
+                    <h3>Super Easy to Edit</h3>
+                    <p>Harum quod in minima sint eligendi excepturi assumenda nisi vero, ad magnam modi explicabo blanditiis unde enim libero! Facere minima quibusdam natus odio quos id libero, saepe ipsa quisquam porro...........</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="feauture-image">
+            <img src="images/architect.png" alt="architect">
+        </div>
+        <div class="flying-btn">
+            <button class="btn ten-year">
+                <h2>10+Year</h2>
+                <p>Exprence</p>
+            </button>
+        </div>
+    </div>
+</section>
 </body>
 </html>
