some fact section done

--- a/index.html
+++ b/index.html
@@ -110,5 +110,40 @@
         </div>
     </div>
 </section>
+
+        <!-- Some Fect Section Start -->
+
+<section class="container">
+    <div class="some-fact">
+        <div class="some-fact-text">
+            <h2>Some Fact</h2>            
+            <p>
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+        </div>
+        <div class="some-fact-box">
+            <div class="single-box">
+                <img src="images/icons/ribon.png" alt="ribon">
+                <h3>54</h3>
+                <p>Awards Winning</p>
+            </div>
+            <div class="single-box">
+                <img src="images/icons/projects.png" alt="projects">
+                <h3>1458</h3>
+                <p>Project Finished</p>
+            </div>
+            <div class="single-box">
+                <img src="images/icons/customers.png" alt="customers">
+                <h3>590</h3>
+                <p>Client Workde</p>
+            </div>
+            <div class="single-box">
+                <img src="images/icons/email.png" alt="email">
+                <h3>22578</h3>
+                <p>Email Send</p>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
