--- a/index.html
+++ b/index.html
@@ -145,5 +145,68 @@
         </div>
     </div>
 </section>
+
+             <!-- Our Sponspors Section Start -->
+
+<section class="container">
+    <div class="sponspor">
+        <div class="sopnspor-text">
+            <h2>Our Sponspors</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="sponspor-icon">
+            <img src="images/sponsors/spotify.png" alt="spotify">
+            <img src="images/sponsors/amazon.png" alt="amazon">
+            <img src="images/sponsors/google.png" alt="google">
+            <img src="images/sponsors/telerama.png" alt="telerama">
+            <img src="images/sponsors/figma.png" alt="figma">
+        </div>
+    </div>
+</section>
+
+                    <!-- Extra Section Start -->
+
+<section class="footer-area">
+    <footer class="footer container"> 
+        <div class="info">
+            <h1>G3 Architects</h1>
+            <p>
+                The company principle of Architecture-Studio is the collective conception. From the very beginning, the practice has believed in the virtues of exchange, crossing ideas, common effort, shared knowledge and enthusiasm.
+            </p>
+
+        </div>
+        <div class="contact">
+            <h2>GET IN TOUCH</h2>
+            <p>+7 (885) 589 69 85</p>
+            <p>abc.info.gmail.com</p>
+            <p>Litačka, Jungmannova 35/29, Nové Město,Czech Republic</p>
+        </div>
+    </footer>
+    <div class="container line">
+
+    </div>
+    <div class="bottom container" >
+        <div class="text">
+            <h4>PRAGUE (C) 2019 ALL RIGHTS RESERVED</h4>
+        </div>
+        <div class="socila">
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<section class="container">
+    <div class="copyright">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </div>
+</section>
+
+<script src="https://kit.fontawesome.com/6edc3eb242.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
