--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="#">home</a></li>
                         <li><a href="#">dashboard</a></li>
                         <li><a href="#">about</a></li>
-                        <li><a href="#">contact us</a></li>
+                        <li><a href="#">contact</a></li>
                         <li><a href="#">login</a></li>
                     </ul>
                 </div>
@@ -148,7 +148,7 @@
 
              <!-- Our Sponspors Section Start -->
 
-<section class="container">
+<section class="container ">
     <div class="sponspor">
         <div class="sopnspor-text">
             <h2>Our Sponspors</h2>
