Responsive done for 375px

--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
         <!-- Header Banner part start   -->
 
         <section class="container">
-            <div class="top-title">
-                <h1>Brand New Group of Architects </h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            </div>
-            <div class="explore-btn">
-                <button class="btn">Explore More</button>
-            </div>
-            <div class="banner">
-                <img src="images/banner.png" alt="">
+            <div class="banner-top-text">
+                <div class="top-title">
+                    <h1> Brand New Group of Architects </h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="explore-btn">
+                    <button class="btn">Explore More</button>
+                </div>
+                <div class="banner">
+                    <img src="images/banner.png" alt="banner">
+                </div>
             </div>
         </section>
     </header>
